[tool.poetry]
name = "cedtrainscheduler"
version = "0.1.0"
description = "A Train Task Scheduler for Ced."
authors = ["l1hy <1151824226@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
torch = "^2.6.0"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
show-fixes = true
output-format = "full"
line-length = 120

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
